--- a/StackWalker/StackWalker.vcxproj.filters
+++ b/StackWalker/StackWalker.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="StackWalker.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="temp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="StackWalker.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="posh.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
